[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://9rect.png" type="Texture" id=2]
[ext_resource path="res://FredokaOne-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = null
Label/styles/normal = null

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveLoadWindow" type="CenterContainer" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CanvasLayer/Control/SaveLoadWindow"]
margin_left = 64.0
margin_top = 52.0
margin_right = 576.0
margin_bottom = 308.0
rect_min_size = Vector2( 512, 256 )
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/SaveLoadWindow/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Console" type="NinePatchRect" parent="CanvasLayer/Control/SaveLoadWindow/Panel/VBoxContainer"]
self_modulate = Color( 1, 0.501961, 0, 1 )
margin_right = 504.0
margin_bottom = 223.0
size_flags_vertical = 3
texture = ExtResource( 2 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Control/SaveLoadWindow/Panel/VBoxContainer/Console"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConsoleLabel" type="Label" parent="CanvasLayer/Control/SaveLoadWindow/Panel/VBoxContainer/Console/ScrollContainer"]
margin_right = 488.0
margin_bottom = 207.0
size_flags_horizontal = 3
size_flags_vertical = 3
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/SaveLoadWindow/Panel/VBoxContainer"]
margin_top = 227.0
margin_right = 504.0
margin_bottom = 248.0

[node name="Control" type="Control" parent="CanvasLayer/Control/SaveLoadWindow/Panel/VBoxContainer/HBoxContainer"]
margin_right = 415.0
margin_bottom = 21.0
size_flags_horizontal = 3

[node name="SaveButton" type="Button" parent="CanvasLayer/Control/SaveLoadWindow/Panel/VBoxContainer/HBoxContainer"]
margin_left = 419.0
margin_right = 460.0
margin_bottom = 21.0
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadButton" type="Button" parent="CanvasLayer/Control/SaveLoadWindow/Panel/VBoxContainer/HBoxContainer"]
margin_left = 464.0
margin_right = 504.0
margin_bottom = 21.0
text = "Load"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/Control/SaveLoadWindow/Panel/VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/SaveLoadWindow/Panel/VBoxContainer/HBoxContainer/LoadButton" to="." method="_on_LoadButton_pressed"]
